# mlpforecast

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
example/: Correlation_analysis.ipynb  Tanesco_default_model.db  data_loading.ipynb  data_pipeline.pkl  getting_started.ipynb  getting_started_quantile.ipynb  test_probabilistic.ipynb
mlpforecast/: mkdocs.yml
mlpforecast/custom_loss/: quantile.py
mlpforecast/data/: loader.py  processing.py  transform.py
mlpforecast/distiribution/: fpqr.py
mlpforecast/distribution/: __init__.py  fpqreg.py  parametric.py  qreg.py
mlpforecast/docs/: evaluation.md  forecaster.md  index.md  metrics.md  model.md  net.md  plot.md  stats.md
mlpforecast/evaluation/: backtester.py  metrics.py
mlpforecast/forecaster/: __init__.py  backtester.py  common.py  mlp.py  mlpfqr.py  mlplaplace.py  mlpmultivariate.py  mlpqr.py  utils.py
mlpforecast/metrics/: daily_metrics.py  deterministic.py  probabilistic.py
mlpforecast/model/: __init__.py  base_model.py  deterministic.py  parametric.py  point_forecast.py  quantile.py
mlpforecast/net/: __init__.py  embending.py  fpqreg.py  layers.py  parametric.py  qreg.py  utils.py
mlpforecast/plot/: visual_functions.py
mlpforecast/stats/: corr.py
mlpforecast/utils/: quantile_loss.py
tests/: test_loader.py
