[tool.poetry]
name = "mlpforecast"
version = "0.1.0"
description = "Multilayer Perceptron Learning Models for Time Series Forecasting"
authors = ["sambaiga <sambaiga@gmail.com>",  "apina <fred.apina@gmail.com>"]
readme = "README.md"



[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy ="^1.24.3"
torch = "^2.0.1"
lightning ="^2.0.8"
optuna = "^3.2.0"
optuna-integration="^3.6.0"
scikit-learn="1.5.1"
pandas="1.5.3"
pyarrow=">=13.0.0,<14.0.0"
pytimetk="^0.4.0"
matplotlib="^3.8.4"
ppscore="^1.3.0"
torchmetrics= "^1.4.0"
wandb="^0.17.4"
tqdm="^4.65.1.dev3+g5587f0d"
tensorboard="^2.1.5"
rich="^13.7.1"
arviz="^0.18.0"
astral="^3.2"
altair = ">=5.3.0"
vl-convert-python=">1.4.0"
matplotlib_inline = ">=0.1.6"
seaborn = ">=0.13.2"
statsmodels = ">=0.14.0"
coreforecast="^0.0.6"
utilsforecast="^0.0.25"
pmdarima="^2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pre-commit= {version = "^3.7.1", python = ">=3.11,<3.12"}
black = {version = "^22.8.0", python = ">=3.11,<3.12"}
pytest-cov = "^5.0.0"
pylint = "2.14.0"
toml = "0.10.2"
click-man="0.4.1"
mkdocs="1.6.0"
mkdocstrings-python="^1.10.5"
mkdocs-material-extensions="^1.3.1"

[tool.ruff]
target-version = 'py311'
exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "S",  # bandit
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
